--- a/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
+++ b/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
@@ -1,1 +1,48 @@
-<p>nurse-dashboard works!</p>
+<p-card header="Real Time Ward Bed">
+  <div class="card">
+    <p-table
+      styleClass='p-datatable-sm p-datatable-striped'
+      [tableStyle]="{ 'min-width': '50rem' }"
+      [columns]="cols"
+      [value]="wards_bed"
+      [rows]="rows"
+      [(first)]="first"
+      [totalRecords]="totalRecords"
+      [paginator]="true"
+      [showCurrentPageReport]="true"
+      [lazy]="true"
+      [lazyLoadOnInit]="false"
+      (onLazyLoad)="lazyLoad($event)"
+      [tableStyle]="{ 'min-width': '40rem' }"
+    >
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{ col.header }}
+          </th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr>
+          <td *ngFor="let col of columns">
+            {{ rowData[col.field] }}
+          </td>
+          <td>
+            <p-button
+              *ngIf="rowData['currentStatus'] == 'UCCUPIED'"
+              label="Detail"
+              icon="pi pi-search"
+            />
+            <p-button
+              *ngIf="rowData['currentStatus'] != 'UCCUPIED'"
+              label="Assign"
+              icon="pi pi-user-plus"
+              (click)="show()"
+            />
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</p-card>
