--- a/src/app/modules/access/login/login.component.html
+++ b/src/app/modules/access/login/login.component.html
@@ -1,1 +1,10 @@
-<p>login works!</p>
+<div >
+    <form  [formGroup]="loginForm" (ngSubmit)="login()">
+        <div>
+            <h1>Login</h1>
+        </div>
+        <input placeholder="Username" formControlName="username" />
+        <input type="password" formControlName="password" placeholder="Password" />
+        <button type="submit" [disabled]="!loginForm.valid">Login</button>
+    </form>
+</div>
