popup assignment bed to patient

--- a/src/app/modules/nurse/bed-assignment/bed-assignment.component.html
+++ b/src/app/modules/nurse/bed-assignment/bed-assignment.component.html
@@ -1,1 +1,6 @@
-<p>bed-assignment works!</p>
+<p-dropdown 
+    [options]="emergencies"
+    [(ngModel)]="selectPatient"
+    appendTo="body"
+    optionLabel="emergencyVisit.patient.firstName" 
+    placeholder="Select a Patient" />
