--- a/src/app/modules/access/login/login.component.html
+++ b/src/app/modules/access/login/login.component.html
@@ -1,5 +1,5 @@
 <div >
-    <form  [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
         <div>
             <h1>Login</h1>
         </div>
