add some info on admin dashboard

--- a/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/modules/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,2 +1,17 @@
-<p>admin-dashboard works!</p>
+<button>
+    Admin: {{ dashboardData.admin }}
+</button>
+<button>
+    Doctors: {{ dashboardData.doctors }}
+</button>
+<button>
+    Nurses: {{ dashboardData.nurses }}
+</button>
+<button>
+    Secretaries: {{ dashboardData.secretaries }}
+</button>
+<button>
+    Patients: {{ dashboardData.patients }}
+</button>
+
 <app-logout />
