--- a/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
+++ b/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
@@ -1,3 +1,23 @@
+<p-menubar styleClass="width: 100%; padding: 0; background-color: #f8f9fa; border-bottom: 1px solid #ddd; margin: 0;">
+  <ng-template pTemplate="start">
+      <div class="flex align-items-center justify-content-start w-full">
+          <a 
+              routerLink="/nurse/dashboard" 
+              class="text-primary p-2 no-underline hover:text-blue-600"
+          >
+              Nurse Dashboard
+          </a>
+          <a 
+              routerLink="/nurse/billing-invoice"
+              class="text-primary p-2 no-underline hover:text-blue-600"
+          >
+              Billing Invoice
+          </a>
+      </div>
+  </ng-template>
+</p-menubar>
+
+
 <p-card header="Real Time Ward Bed">
   <div class="card">
     <p-table
@@ -17,7 +37,7 @@
     >
     <ng-template pTemplate="caption">
       <div class="flex align-items-center justify-content-end">
-          <p-button class="ml-2" label="Assign bed to patient" icon="pi pi-user-plus" (click)="assignBed()"/>
+          <p-button class="ml-2" label="Assign bed to patient" icon="pi pi-user-plus" severity="help" (click)="assignBed()"/>
       </div>
     </ng-template>
       <ng-template pTemplate="header" let-columns>
@@ -38,17 +58,20 @@
               *ngIf="rowData['currentStatus'] == 'UCCUPIED'"
               label="Detail"
               icon="pi pi-search"
+              class="mr-2"
             />
             <p-button
               *ngIf="rowData['currentStatus'] != 'UCCUPIED'"
               label="Assign"
               icon="pi pi-user-plus"
+              severity="help"
               (click)="assignBed(rowData)"
             />
             <p-button
               *ngIf="rowData['currentStatus'] == 'UCCUPIED'"
               label="Free"
               icon="pi pi-times"
+              severity="danger"
               (click)="onFreeBed(rowData)"
             />
           </td>
