--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 @import "primeng/resources/primeng.css";
 @import 'primeflex/primeflex.scss';
 @import "primeicons/primeicons.css";
+
+body {
+    margin: 0 !important;
+}
