--- a/src/app/modules/admin/admin-dashboard/patient-user-list/patient-user-list.component.html
+++ b/src/app/modules/admin/admin-dashboard/patient-user-list/patient-user-list.component.html
@@ -1,1 +1,44 @@
-<p>patient-user-list works!</p>
+<form [formGroup]="filterForm" (ngSubmit)="onGetUserList()">
+    <div class="card flex justify-content-center">
+        <p-dropdown
+                formControlName="status"
+                optionLabel="label"
+                placeholder="Select Item"
+                name="status"
+                optionValue="value"
+                [options]="activeChoices"
+                [virtualScroll]="true"
+                [virtualScrollItemSize]="38"
+                [style]="{ width: '15rem' }"
+        />
+    </div>
+    <button type="submit" class="btn btn-danger btn-lg btn-block">Submit</button>
+</form>
+
+<p-table
+        styleClass='p-datatable-sm p-datatable-striped'
+        [value]="users"
+        [rows]="10"
+        [tableStyle]="{ 'min-width': '50rem' }"
+        [paginator]="true"
+        [rowsPerPageOptions]="[10, 20, 50]"
+>
+    <ng-template pTemplate="header" let-columns>
+        <tr>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Email</th>
+            <th>Username</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-user>
+        <tr>
+            <td>{{ user.firstName }}</td>
+            <td>{{ user.lastName }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.username }}</td>
+        </tr>
+    </ng-template>
+</p-table>
+
+
