--- a/src/app/modules/shared/billing-invoice/billing-invoice.component.html
+++ b/src/app/modules/shared/billing-invoice/billing-invoice.component.html
@@ -33,7 +33,7 @@
       <ng-template pTemplate="body" let-rowData let-columns="columns">
         <tr>
           <td *ngFor="let col of columns">
-            {{ col.field === 'invoiceTimestamp' ? (rowData[col.field] | date:'') : rowData[col.field] }}
+            {{ col.field === 'invoiceTimestamp' ? (rowData[col.field] | date:'short') : rowData[col.field] }}
           </td>
           <td>
             <p-button
