detailed billing invoice

--- a/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
+++ b/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
@@ -12,7 +12,7 @@
           styleClass="w-full" />
 
           <div *ngIf="invoice">
-            <label>Total Amount</label>
+            <label>Total Amount:</label>
             {{invoice.totalAmount}}</div>
         
 
