payment billing invoice detail page

--- a/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
+++ b/src/app/modules/shared/add-billing-invoice/add-billing-invoice.component.html
@@ -18,7 +18,7 @@
         
 
         <p-button 
-          label="Assign Bed"
+          label="Create Invoice"
           icon="pi pi-check"
           styleClass="w-full"
           [disabled]="!amountInvoice"
