--- a/src/app/modules/shared/billing-invoice/billing-invoice.component.html
+++ b/src/app/modules/shared/billing-invoice/billing-invoice.component.html
@@ -40,6 +40,7 @@
               label="Detail"
               icon="pi pi-search"
               class="mr-2"
+              (click)="detailInvoice(rowData)"
             />
           </td>
         </tr>
