--- a/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
+++ b/src/app/modules/admin/admin-dashboard/staff-user-list/staff-user-list.component.html
@@ -45,9 +45,8 @@
                         [notActiveLabel]="'Not active'"
                         (onChangeEvent)="onEnableDisableUser(user.id, $event)"
                 ></app-toggle-button>
-            </td>
-            <td>
                 <button routerLink="/admin/edit-user/{{user.id}}/staff/{{role}}">Edit user</button>
+                <button routerLink="/admin/change-user-password/{{user.id}}">Change password</button>
             </td>
         </tr>
     </ng-template>
