patient management - secretary side

--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -1,1 +1,3 @@
-<p>secretary-dashboard works!</p>
+<button routerLink="/secretary/dashboard/patient/list">Show patients</button>
+<app-logout />
+<router-outlet />
