--- a/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
+++ b/src/app/modules/nurse/nurse-dashboard/nurse-dashboard.component.html
@@ -46,20 +46,20 @@
           </td>
           <td>
             <p-button
-              *ngIf="rowData['currentStatus'] == 'UCCUPIED'"
+              *ngIf="rowData['currentStatus'] == 'OCCUPIED'"
               label="Detail"
               icon="pi pi-search"
               class="mr-2"
             />
             <p-button
-              *ngIf="rowData['currentStatus'] != 'UCCUPIED'"
+              *ngIf="rowData['currentStatus'] != 'OCCUPIED'"
               label="Assign"
               icon="pi pi-user-plus"
               severity="help"
               (click)="assignBed(rowData)"
             />
             <p-button
-              *ngIf="rowData['currentStatus'] == 'UCCUPIED'"
+              *ngIf="rowData['currentStatus'] == 'OCCUPIED'"
               label="Free"
               icon="pi pi-times"
               severity="danger"
