--- a/src/app/modules/shared/detail-billing-invoice/detail-billing-invoice.component.html
+++ b/src/app/modules/shared/detail-billing-invoice/detail-billing-invoice.component.html
@@ -16,7 +16,7 @@
               <label class="p-mb-1 mr-2 text-sm font-medium text-600">Payment Status</label>
               <p-tag
                 [value]="invoice.paymentStatus"
-                [severity]="invoice.paymentStatus === 'pending' ? 'warning' : 'success'"
+                [severity]="invoice.paymentStatus === 'PENDING' ? 'warning' : 'success'"
               ></p-tag>
             </div>
           </div>
@@ -42,13 +42,12 @@
           <!-- Payment Received Amount -->
           <div class="p-col-12 p-md-6">
             <div class="p-d-flex p-flex-column p-mb-3">
-              <label class="p-mb-1 text-sm font-medium text-600">Payment Received Amount</label>
-              <input
-                type="number"
-                [(ngModel)]="invoice.paymentReceivedAmount"
-                class="p-inputtext p-component"
-                placeholder="Enter amount"
-              />
+              <label class="p-mb-1 mr-1 text-sm font-medium text-600">Payment Received</label>
+              <p-checkbox
+                [(ngModel)]="invoice.paymentReceived"
+                [binary]="true"
+                [disabled]="invoice.paymentReceived"
+              ></p-checkbox>
             </div>
           </div>
           </div>
@@ -71,10 +70,11 @@
         </div>
       </p-card>
     </div>
-    <div class="p-col-12">
+    <div class="p-col-12 mt-2 p-d-flex p-jc-center">
         <p-button
           label="Update Payment Received Amount"
           icon="pi pi-check"
+          [disabled]="!invoice.paymentReceived || invoice.paymentStatus == 'COMPLETED'"
           styleClass="p-button-success"
           (click)="updatePaymentReceivedAmount()"
         ></p-button>
