--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -1,1 +1,55 @@
-<p>secretary-dashboard works!</p>
+<app-dynamic-navbar [navItems]="navItems"/>
+<p-card header="Patient triage status">
+  <div class="card">
+    <p-table
+      styleClass='p-datatable-sm p-datatable-striped'
+      [tableStyle]="{ 'min-width': '50rem' }"
+      [columns]="cols"
+      [value]="patients"
+      [rows]="rows"
+      [(first)]="first"
+      [totalRecords]="totalRecords"
+      [paginator]="true"
+      [showCurrentPageReport]="true"
+      [lazy]="true"
+      [lazyLoadOnInit]="false"
+      (onLazyLoad)="lazyLoad($event)"
+      [tableStyle]="{ 'min-width': '40rem' }"
+    >
+      <ng-template pTemplate="caption">
+        <div class="flex align-items-center justify-content-end">
+          <p-button class="ml-2" label="Register new patient" icon="pi pi-user-plus" severity="help" (click)="patientRegister()"/>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{ col.header }}
+          </th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-columns="columns">
+        <tr>
+          <td *ngFor="let col of columns">
+            <ng-container *ngIf="col.field === 'name'; else otherFields">
+              {{ rowData['firstName'] }} {{ rowData['lastName'] }}
+            </ng-container>
+            <ng-template #otherFields>
+              {{ rowData[col.field] }}
+            </ng-template>
+          </td>
+          <td>
+          <td>
+            <p-button
+              label="Detail"
+              icon="pi pi-user-plus"
+              severity="help"
+              (click)="patientDetail(rowData)"
+            />
+            </td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
+</p-card>
