--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -17,8 +17,28 @@
       [tableStyle]="{ 'min-width': '40rem' }"
     >
       <ng-template pTemplate="caption">
-        <div class="flex align-items-center justify-content-end">
-          <p-button class="ml-2" label="Register new patient" icon="pi pi-user-plus" severity="help" (click)="patientRegister()"/>
+        <div class="flex align-items-center justify-content-between">
+          <div class="flex">
+            <p-floatLabel>
+              <input pInputText id="searchByID" [(ngModel)]="searchById" (ngModelChange)="onSearchChange()"/>
+              <label for="searchByID">Search by ID</label>
+            </p-floatLabel>
+            <p-floatLabel >
+              <input pInputText id="searchBySurname" [(ngModel)]="searchBySurname" (ngModelChange)="onSearchChange()"/>
+              <label for="searchBySurname">Search by Surname</label>
+            </p-floatLabel>
+            <p-floatLabel >
+              <p-dropdown id="searchByPriority" [(ngModel)]="searchByPriority" [options]="priorityOptions" [showClear]="true" (ngModelChange)="onSearchChange()"/>
+              <label for="searchByPriority">Search by Priority</label>
+            </p-floatLabel>
+            <p-floatLabel>
+              <p-dropdown id="searchByStatus" [(ngModel)]="searchByStatus" [options]="statusOptions"  [checkmark]="true" [showClear]="true" (ngModelChange)="onSearchChange()"/>
+              <label for="searchByStatus">Search by Status</label>
+            </p-floatLabel>
+          </div>
+          <div>
+            <p-button class="ml-2" label="Register new patient" icon="pi pi-user-plus" severity="help" (click)="patientRegister()"/>
+          </div>
         </div>
       </ng-template>
       <ng-template pTemplate="header" let-columns>
