feat: adding features

--- a/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
+++ b/src/app/modules/secretary/secretary-dashboard/secretary-dashboard.component.html
@@ -23,21 +23,24 @@
               <input pInputText id="searchByID" [(ngModel)]="searchById" (ngModelChange)="onSearchChange()"/>
               <label for="searchByID">Search by ID</label>
             </p-floatLabel>
-            <p-floatLabel >
+            <p-floatLabel>
               <input pInputText id="searchBySurname" [(ngModel)]="searchBySurname" (ngModelChange)="onSearchChange()"/>
               <label for="searchBySurname">Search by Surname</label>
             </p-floatLabel>
-            <p-floatLabel >
-              <p-dropdown id="searchByPriority" [(ngModel)]="searchByPriority" [options]="priorityOptions" [showClear]="true" (ngModelChange)="onSearchChange()"/>
+            <p-floatLabel>
+              <p-dropdown id="searchByPriority" [(ngModel)]="searchByPriority" [options]="priorityOptions"
+                          [showClear]="true" (ngModelChange)="onSearchChange()"/>
               <label for="searchByPriority">Search by Priority</label>
             </p-floatLabel>
             <p-floatLabel>
-              <p-dropdown id="searchByStatus" [(ngModel)]="searchByStatus" [options]="statusOptions"  [checkmark]="true" [showClear]="true" (ngModelChange)="onSearchChange()"/>
+              <p-dropdown id="searchByStatus" [(ngModel)]="searchByStatus" [options]="statusOptions" [checkmark]="true"
+                          [showClear]="true" (ngModelChange)="onSearchChange()"/>
               <label for="searchByStatus">Search by Status</label>
             </p-floatLabel>
           </div>
           <div>
-            <p-button class="ml-2" label="Register new patient" icon="pi pi-user-plus" severity="help" (click)="patientRegister()"/>
+            <p-button class="ml-2" label="Register new patient" icon="pi pi-user-plus" severity="help"
+                      (click)="patientRegister()"/>
           </div>
         </div>
       </ng-template>
@@ -63,11 +66,18 @@
           <td>
             <p-button
               label="Detail"
-              icon="pi pi-user-plus"
+              icon="pi pi-info-circle"
               severity="help"
               (click)="patientDetail(rowData)"
             />
-            </td>
+            <p-button
+              label="Triage"
+              icon="pi pi-user-edit"
+              severity="help"
+              class="pl-3"
+              (click)="updateTriage(rowData)"
+            />
+          </td>
         </tr>
       </ng-template>
     </p-table>
