--- a/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
+++ b/src/app/modules/secretary/secretary-detail/secretary-detail.component.html
@@ -4,16 +4,6 @@
       <div class="flex flex-column gap-5">
         <div class="flex gap-3" *ngIf="detail">
           <p-floatLabel>
-            <p-dropdown id="priorityLevel" formControlName="priorityLevel" [options]="priorityOptions" optionLabel="label" optionValue="value"/>
-            <label for="priorityLevel">Priority Level</label>
-          </p-floatLabel>
-          <p-floatLabel>
-            <p-dropdown id="currentStatus" formControlName="currentStatus" [options]="statusOptions" optionLabel="label" optionValue="value"/>
-            <label for="currentStatus">Current Status</label>
-          </p-floatLabel>
-        </div>
-        <div class="flex gap-3" *ngIf="detail">
-          <p-floatLabel>
             <input pInputText id="patientId" formControlName="patientId" autocomplete="off" readonly/>
             <label for="patientId">Patient ID</label>
           </p-floatLabel>
@@ -24,11 +14,11 @@
         </div>
         <div class="flex gap-3">
           <p-floatLabel>
-            <input pInputText id="firstName" formControlName="firstName" autocomplete="off" />
+            <input pInputText id="firstName" formControlName="firstName" autocomplete="off"/>
             <label for="firstName">First Name</label>
           </p-floatLabel>
           <p-floatLabel>
-            <input pInputText id="lastName" formControlName="lastName" autocomplete="off" />
+            <input pInputText id="lastName" formControlName="lastName" autocomplete="off"/>
             <label for="lastName">Last Name</label>
           </p-floatLabel>
         </div>
@@ -38,41 +28,42 @@
             <label for="dateOfBirth">Date of Birth</label>
           </p-floatLabel>
           <p-floatLabel>
-            <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label" optionValue="value"/>
+            <p-dropdown id="Gender" formControlName="gender" [options]="genderOptions" optionLabel="label"
+                        optionValue="value"/>
             <label for="Gender">Gender</label>
           </p-floatLabel>
         </div>
         <div class="flex gap-3">
           <p-floatLabel>
-            <input pInputText id="email" formControlName="email" autocomplete="off" />
+            <input pInputText id="email" formControlName="email" autocomplete="off"/>
             <label for="email">Email</label>
           </p-floatLabel>
           <p-floatLabel>
-            <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off" />
+            <input pInputText id="contactNumber" formControlName="contactNumber" autocomplete="off"/>
             <label for="contactNumber">Contact Number</label>
           </p-floatLabel>
         </div>
         <div class="flex gap-3">
           <p-floatLabel>
-            <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off" />
+            <input pInputText id="emergencyContactName" formControlName="emergencyContactName" autocomplete="off"/>
             <label for="emergencyContactName">Emergency Contact Name</label>
           </p-floatLabel>
           <p-floatLabel>
-            <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off" />
+            <input pInputText id="emergencyContactNumber" formControlName="emergencyContactNumber" autocomplete="off"/>
             <label for="emergencyContactNumber">Emergency Contact Number</label>
           </p-floatLabel>
         </div>
         <p-floatLabel class="w-full">
-          <input pInputText id="address" formControlName="address" autocomplete="off" />
+          <input pInputText id="address" formControlName="address" autocomplete="off"/>
           <label for="address">Address</label>
         </p-floatLabel>
         <div class="flex gap-3">
           <p-floatLabel>
-            <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off" />
+            <input pInputText id="insuranceProvider" formControlName="insuranceProvider" autocomplete="off"/>
             <label for="insuranceProvider">Insurance Provider</label>
           </p-floatLabel>
           <p-floatLabel>
-            <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off" />
+            <input pInputText id="insurancePolicyNumber" formControlName="insurancePolicyNumber" autocomplete="off"/>
             <label for="insurancePolicyNumber">Insurance Policy Number</label>
           </p-floatLabel>
 
@@ -84,7 +75,7 @@
           type="submit"
           (onClick)="onRegistration()"
           [disabled]="!patientForm.valid"
-          styleClass="w-full" />
+          styleClass="w-full"/>
         <p-button
           *ngIf="detail"
           label="Update"
@@ -92,7 +83,7 @@
           type="submit"
           (onClick)="onSubmit()"
           [disabled]="!patientForm.valid"
-          styleClass="w-full" />
+          styleClass="w-full"/>
       </div>
     </p-card>
   </div>
